# python_examples

./: LICENSE  README.md
arch/hexarch/py_futbol/: main.py
arch/hexarch/py_futbol/adapters/driven/test/: test.py
arch/hexarch/py_futbol/app/sclubman/: sclubman_fin.py
arch/hexarch/py_futbol/configurator/basic_configurator/: basic_configurator.py
comm/http_json/: README.md  client.py  server.py
comm/local_grpc_proto/: readme.md
comm/local_grpc_proto/src/: helloworld_pb2_grpc.py  py_client.py  py_server.py
comm/local_grpc_proto/src/proto/: helloworld.proto
pygame/01_hello_world/: pygame_hello_world.py  pyproject.toml
