[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygame-hello-world"
version = "0.1.0"
description = "A modular sport management simulator"
authors = [
    { name = "Pablo Gallardo", email = "pmgallardo@usal.es" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "pygame>=2.6",
    # Add here if/when you need them, e.g.:
    # "pydantic>=2.0",
    # "sqlalchemy>=2.0",
]

[project.optional-dependencies]
# Extras for development, testing, etc.
dev = [
    "pytest>=8.0",
    "ruff>=0.4",        # linter/formatter
    "mypy>=1.0",        # type checker
]

[tool.setuptools.packages.find]
where = [""]

[tool.pytest.ini_options]
pythonpath = [""]

[tool.ruff]
line-length = 88
target-version = "py311"

